--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -134,11 +134,16 @@ body {
 
 .wizard img {
     padding-top: 30px;
-    padding-bottom 30px;
+    padding-bottom:30px;
     width:375px;
     height:250px;
 }
 
 .show {
     display: block;
+}
+
+.barbStep1 img {
+    width: 550px;
+    height:400px;
 }
